--- a/h.html
+++ b/h.html
@@ -43,7 +43,7 @@
 
     <!-- Products Section -->
     <section id="products" class="products">
-        <h2>Our Products</h2>
+        <h2>Wellness with a wonderful taste</h2>
         <div class="product-grid">
             <!-- Product items go here -->
         </div>
