--- a/h.html
+++ b/h.html
@@ -16,7 +16,7 @@
                     <li><a href="#products">PRODUCTS</a></li>
                     <li><a href="#whatsinside">WHAT'S INSIDE</a></li>
                     <li><a href="#about">ABOUT US</a></li>
-                    <li><a href="#contact">CONTACT US</a></li>
+                    <li><a href="contact.html">CONTACT US</a></li>
                 </ul>
             </nav>
         </div>
