--- a/contact.html
+++ b/contact.html
@@ -4,20 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lotus Energy</title>
-    <link rel="stylesheet" href="contactstyles.css">
+    <link rel="stylesheet" href="contactstyle.css">
 </head>
 <body>
-    <!-- Header -->
+
     <header>
         <div class="navbar">
-            <a href="#" class="logo"><img src="assets/lotusflower.png" alt="Lotus Flower"></a>
+            <a href="h.html" class="logo"><img src="assets/lotusflower.png" alt="Lotus Flower"></a>
             <nav>
                 <ul>
                     <li><a href="#products">PRODUCTS</a></li>
-                    <li><a href="#whatsinside">WHAT'S INSIDE</a></li>
-                    <li><a href="#about">ABOUT US</a></li>
-                    <li><a href="#contact">CONTACT US</a></li>
+                    <li><a href="whatsinside.html">WHAT'S INSIDE</a></li>
+                    <li><a href="aboutus.html">ABOUT US</a></li>
+                    <li><a href="contact.html">CONTACT US</a></li>
                 </ul>
             </nav>
         </div>
         <div class="header-background-text">LOTUS</div>
+    </header>
+    
+        <!-- footer -->
+        <footer>
+            <p>&copy; 2024 Lotus Energy. All rights reserved.</p>
+        </footer>
