--- a/h.html
+++ b/h.html
@@ -10,12 +10,12 @@
     <!-- Header -->
     <header>
         <div class="navbar">
-            <a href="#" class="logo"><img src="assets/lotusflower.png" alt="Lotus Flower"></a>
+            <a href="h.html" class="logo"><img src="assets/lotusflower.png" alt="Lotus Flower"></a>
             <nav>
                 <ul>
                     <li><a href="#products">PRODUCTS</a></li>
-                    <li><a href="#whatsinside">WHAT'S INSIDE</a></li>
-                    <li><a href="#about">ABOUT US</a></li>
+                    <li><a href="whatsinside.html">WHAT'S INSIDE</a></li>
+                    <li><a href="aboutus.html">ABOUT US</a></li>
                     <li><a href="contact.html">CONTACT US</a></li>
                 </ul>
             </nav>
@@ -55,20 +55,20 @@
         <p>Insert benefits and unique selling points of your product here.</p>
     </section>
 
-    <!-- About Section -->
+    <!-- about -->
     <section id="about" class="about">
         <h2>About Us</h2>
         <p>Share your brand story and mission here.</p>
     </section>
 
-    <!-- Contact Section -->
+    <!-- contact -->
     <section id="contact" class="contact">
         <h2>Contact Us</h2>
         <p>Email: support@lotusenergy.com</p>
         <p>Phone: +1 (111) 111-1111</p>
     </section>
     
-    <!-- Footer -->
+    <!-- footer -->
     <footer>
         <p>&copy; 2024 Lotus Energy. All rights reserved.</p>
     </footer>
