--- a/h.html
+++ b/h.html
@@ -45,20 +45,14 @@
     <section id="products" class="products">
         <h2>Wellness with a wonderful taste</h2>
         <div class="product-grid">
-            <!-- Product items go here -->
+            <a class="logo"><img src="assets/redcan1.png" alt="Lotus Flower"></a>
         </div>
     </section>
 
     <!-- Benefits Section -->
     <section id="benefits" class="benefits">
-        <h2>Why Choose Us</h2>
-        <p>Insert benefits and unique selling points of your product here.</p>
-    </section>
-
-    <!-- about -->
-    <section id="about" class="about">
-        <h2>About Us</h2>
-        <p>Share your brand story and mission here.</p>
+        <h2>All Real Ingredients, No Crash</h2>
+        <p>Lotus Energy drinks do not contain any added sugar, additional supplements, or checmicals. With the perfect amount of caffeine, you'll be alert and awake without the feeling of a crash after.</p>
     </section>
 
     <!-- contact -->
