--- a/aboutus.html
+++ b/aboutus.html
@@ -10,10 +10,10 @@
 
     <header>
         <div class="navbar">
-            <a href="h.html" class="logo"><img src="assets/lotusflower.png" alt="Lotus Flower"></a>
+            <a href="h.html" class="logo"><img src="assets/lotusflowerAlt.png" alt="Lotus Flower"></a>
             <nav>
                 <ul>
-                    <li><a href="#products">PRODUCTS</a></li>
+                    <li><a href="products.html">PRODUCTS</a></li>
                     <li><a href="whatsinside.html">WHAT'S INSIDE</a></li>
                     <li><a href="aboutus.html">ABOUT US</a></li>
                     <li><a href="contact.html">CONTACT US</a></li>
@@ -24,23 +24,23 @@
     </header>
     
      <section class="about-section">
-        <div class="about-content">
+        <div class="section-content">
             <h2>About Us</h2>
-            <p>At Lotus Energy, we believe in powering your day with refined energy and a touch of balance.</p>
+            <p>We are an energy drink company that strays away from the traditional energy drink that most consumers know. We don't offer beverages that have intense supplements added or even ingredients that are hard to pronounce. We instead only include fruit juice mixes, coconut water, a pinch of caffeine derieved from green tea leaves, and vegtable juices. These ingredients keep the body happy, while energzing the mind just the right amount.</p>
         </div>
     </section>
 
     <section class="about-section">
         <div class="section-content">
             <h2>Our Mission</h2>
-            <p>Our mission is to provide a clean, natural energy boost that supports both your body and mind. We strive to innovate and deliver a product that energizes without compromise.</p>
+            <p>Our mission is to provide a clean and natural energy boost that supports both your body and mind. We strive to have the best tasting and healthy energy drink to reach the market, in hopes of reducing the harsh accidents caused by over-consumption of caffeine from other energy-related beverages. </p>
         </div>
     </section>
 
     <section class="about-section">
         <div class="section-content">
             <h2>Our Story</h2>
-            <p>Lotus Energy was born from the desire to create an energy drink that not only fuels your ambitions but also aligns with a sustainable, balanced lifestyle. Inspired by the lotus flower—a symbol of resilience and renewal—we set out to redefine energy.</p>
+            <p>Lotus Energy was born from the desire to create an energy drink that not only fuels your ambitions but also aligns with a sustainable and balanced lifestyle. Inspired by the lotus flower—a symbol of purity, we set out to redefine natrual energy. Other energy drink brands that claim to be natural, surprisngly contain harsh additves and supplements that most people may not be aware of. This is why Lotus was born, to give the world a new taste of pure energy while having a superior taste.</p>
         </div>
     </section>
 
@@ -48,9 +48,9 @@
         <div class="section-content">
             <h2>Our Core Values</h2>
             <ul>
-                <li><strong>Innovation:</strong> Continuously crafting better energy solutions.</li>
-                <li><strong>Sustainability:</strong> Reducing our footprint with environmentally-friendly practices.</li>
-                <li><strong>Balance:</strong> Promoting harmony between energy and well-being.</li>
+                <li><strong>Your Well-Being:</strong> At Lotus, we care most about the health of our consumers. This drive persuades us to include only the most meaningful ingredients within our beverages while exlcuding all non-organic ingredients, keeping you energized and feeling great.</li>
+                <li><strong>Sustainability:</strong> Reducing our carbon footprint with environmentally-friendly practices; we only use recyclable materials within our products such as aluminum, paper, and cardboard. And for our clothing merchandise, we only use recycled polyester and nylon.</li>
+                <li><strong>Balance:</strong> We believe in a balance between energy and health; which is why we only add a moderate amount of caffeine into our beverages. This pinch of caffeine keeps you focused and ready for the day, but ensures you don't have a crash later in the day.</li>
             </ul>
         </div>
     </section>
