--- a/whatsinside.html
+++ b/whatsinside.html
@@ -10,10 +10,10 @@
 
     <header>
         <div class="navbar">
-            <a href="h.html" class="logo"><img src="assets/lotusflower.png" alt="Lotus Flower"></a>
+            <a href="h.html" class="logo"><img src="assets/lotusflowerAlt.png" alt="Lotus Flower"></a>
             <nav>
                 <ul>
-                    <li><a href="#products">PRODUCTS</a></li>
+                    <li><a href="products.html">PRODUCTS</a></li>
                     <li><a href="whatsinside.html">WHAT'S INSIDE</a></li>
                     <li><a href="aboutus.html">ABOUT US</a></li>
                     <li><a href="contact.html">CONTACT US</a></li>
@@ -31,11 +31,9 @@
     
     <section class="info-section">
         <div class="info-container">
-            <!-- yellowdrink -->
             <div class="info-image">
                 <img src="assets/LotusAlternateFlavors-1-1.png" alt="Lotus Energy Drink">
-            </div>
-            <!-- yellowtext -->
+        </div>
             <div class="info-text-boxes">
                 <div class="text-box">
                     <h3>For Flavor:</h3>
@@ -47,22 +45,20 @@
                 </div>
                 <div class="text-box">
                     <h3>For Purity:</h3>
-                    <p>No additional sugar, harsh ingredients, or supplements.</p>
+                    <p>No additional sugar, harsh ingredients, artifical pineapple flavoring, or supplements.</p>
                 </div>
             </div>
         </div>
     </section>
     <section class="info-section">
         <div class="info-container">
-            <!-- orangedrink -->
             <div class="info-image">
                 <img src="assets/orangecan.png" alt="Lotus Energy Drink">
-            </div>
-            <!-- orangetext -->
+        </div>
             <div class="info-text-boxes">
                 <div class="text-box">
                     <h3>For Flavor:</h3>
-                    <p>Brief description for box 1. This could highlight a feature or benefit.</p>
+                    <p>Real orange juice, nectarine, and a hint of lemon juice for a tangy and refreshing flavor</p>
                 </div>
                 <div class="text-box">
                     <h3>For Energy:</h3>
@@ -70,22 +66,20 @@
                 </div>
                 <div class="text-box">
                     <h3>For Purity:</h3>
-                    <p>No additional sugar, harsh ingredients, or supplements.</p>
+                    <p>No additional sugar, harsh ingredients, artifical orange flavoring or supplements.</p>
                 </div>
             </div>
         </div>
     </section>
     <section class="info-section">
         <div class="info-container">
-            <!-- reddrink -->
             <div class="info-image">
                 <img src="assets/redcan1.png" alt="Lotus Energy Drink">
-            </div>
-            <!-- redtext -->
+        </div>
             <div class="info-text-boxes">
                 <div class="text-box">
                     <h3>For Flavor:</h3>
-                    <p>Real Strawberries </p>
+                    <p>A refreshing blend of real strawberries, crisp spring water, a hint of lemon, and a touch of natural sweetness, bursting with vibrant flavor.</p>
                 </div>
                 <div class="text-box">
                     <h3>For Energy:</h3>
@@ -93,13 +87,12 @@
                 </div>
                 <div class="text-box">
                     <h3>For Purity:</h3>
-                    <p>No additional sugar, harsh ingredients, or supplements.</p>
+                    <p>No additional sugar, harsh ingredients, artifical strawberry flavoring, or supplements.</p>
                 </div>
             </div>
         </div>
     </section>
 
-        <!-- footer -->
         <footer>
             <p>&copy; 2024 Lotus Energy. All rights reserved.</p>
         </footer>
