--- a/h.html
+++ b/h.html
@@ -7,13 +7,12 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!-- Header -->
     <header>
         <div class="navbar">
-            <a href="h.html" class="logo"><img src="assets/lotusflower.png" alt="Lotus Flower"></a>
+            <a href="h.html" class="logo"><img src="assets/lotusflowerAlt.png" alt="Lotus Flower"></a>
             <nav>
                 <ul>
-                    <li><a href="#products">PRODUCTS</a></li>
+                    <li><a href="products.html">PRODUCTS</a></li>
                     <li><a href="whatsinside.html">WHAT'S INSIDE</a></li>
                     <li><a href="aboutus.html">ABOUT US</a></li>
                     <li><a href="contact.html">CONTACT US</a></li>
@@ -22,7 +21,6 @@
         </div>
         <div class="header-background-text">LOTUS</div>
     </header>
-    <!-- Video Section -->
     <section class="video-section">
         <video autoplay loop muted playsinline>
             <source src="assets/LotusRotate2.mov" type="video/mp4">
@@ -32,37 +30,49 @@
             <p>If you've ever craved an energy drink without a crash, unsettling ingredients, or an unatural taste, then this is the best place to be. Lotus is an organic energy drink that has a minimal amount of sugar with a moderate pinch of caffeine, to give that burst of energy you crave for the day. With our 3 current flavors, you'll be pleased to hear they're made with real fruit juices and no carbonation. Enjoy purity, enjoy Lotus.</p>
         </div>
     </section>
-    <!-- Hero Section -->
-    <section class="hero">
-        <div class="hero-content">
-            <h1>Fuel Your Energy</h1>
-            <p>Discover the power of Your Brand energy drinks.</p>
-            <a href="#shop" class="button">Shop Now</a>
-        </div>
-    </section>
 
-    <!-- Products Section -->
+        <section id="benefits" class="benefits">
+            <h2>All Real Ingredients, No Crash</h2>
+            <p>Lotus Energy drinks do not contain any added sugar, additional supplements, or checmicals. With the perfect amount of caffeine, you'll be alert and awake without the feeling of a crash after.</p>
+        </section>
+
+
+
+
+
+
+
+
+
+        
+
     <section id="products" class="products">
         <h2>Wellness with a wonderful taste</h2>
         <div class="product-grid">
-            <a class="logo"><img src="assets/redcan1.png" alt="Lotus Flower"></a>
+            <div class="product-card">
+                <a href="products.html">
+                <img src="assets/redcan1.png" alt="Strawberry Flavor"></a>
+                <p>Lotus Strawberry</p>
+            </div>
+            <div class="product-card">
+                <a href="products.html">
+                <img src="assets/orangecan.png" alt="Orange Flavor"></a>
+                <p>Lotus Orange</p>
+            </div>
+            <div class="product-card">
+                <a href="products.html">
+                <img src="assets/LotusAlternateFlavors-1-1.png" alt="Pineapple Flavor"></a>
+                <p>Lotus Pineapple</p>
+            </div>
         </div>
     </section>
 
-    <!-- Benefits Section -->
-    <section id="benefits" class="benefits">
-        <h2>All Real Ingredients, No Crash</h2>
-        <p>Lotus Energy drinks do not contain any added sugar, additional supplements, or checmicals. With the perfect amount of caffeine, you'll be alert and awake without the feeling of a crash after.</p>
-    </section>
-
-    <!-- contact -->
-    <section id="contact" class="contact">
-        <h2>Contact Us</h2>
-        <p>Email: support@lotusenergy.com</p>
-        <p>Phone: +1 (111) 111-1111</p>
+    <section class="hero">
+        <div class="hero-content">
+            <a href="products.html" class="button">Shop Now</a>
+        </div>
     </section>
     
-    <!-- footer -->
     <footer>
         <p>&copy; 2024 Lotus Energy. All rights reserved.</p>
     </footer>
